--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif !important;
   background-color: black;
+
 }
 section {
   width: 100%;
@@ -130,7 +131,7 @@ section {
   width: 230px;
 }
 .glow-on-hover{
-    display:inline-flex;
+    margin-top: 100px !important;
     color:#fff;
     text-decoration:none;
     font-size:1.5em;
